syntax = "proto3";

package pb.v1;

option go_package = "pkg/pb";

message Message {
    int32 user_id = 1;
    string content = 2;
 }